Feature(Level): Add level choose plateform

--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "color": "^1.0.3",
+    "font-awesome": "^4.7.0",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-fontawesome": "^1.6.1",
     "styletron-client": "^2.5.7",
     "styletron-react": "^2.5.7",
     "svg.js": "^2.6.1"
