Feature(Animation): Animation between screens

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "font-awesome": "^4.7.0",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
+    "react-addons-css-transition-group": "^15.5.2",
     "react-dom": "^15.5.4",
     "react-fontawesome": "^1.6.1",
     "styletron-client": "^2.5.7",
