--- a/package.json
+++ b/package.json
@@ -2,17 +2,28 @@
   "name": "Demineur",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
+    "lint": "eslint --ext .js ./",
+    "fix": "eslint --fix .js ./",
+    "eject": "react-app-rewired eject"
+  },
   "dependencies": {
-    "color": "^1.0.3",
+    "color": "^3.0.0",
     "font-awesome": "^4.7.0",
-    "prop-types": "^15.5.8",
-    "react": "^15.5.4",
+    "prop-types": "^15.6.2",
+    "react": "^16.5.1",
     "react-addons-css-transition-group": "^15.5.2",
-    "react-dom": "^15.5.4",
+    "react-app-rewired": "^1.6.2",
+    "react-dom": "^16.5.1",
     "react-fontawesome": "^1.6.1",
+    "react-scripts": "1.1.5",
+    "react-transition-group": "1.x",
     "styletron-client": "^2.5.7",
     "styletron-react": "^2.5.7",
-    "svg.js": "^2.6.1"
+    "svg.js": "^2.6.6"
   },
   "devDependencies": {
     "eslint": "^3.19.0",
@@ -21,16 +32,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
-    "prettier": "^1.2.2",
-    "prettier-eslint": "^6.1.1",
-    "react-scripts": "0.9.5"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "lint": "eslint --ext .js ./",
-    "fix": "eslint --fix .js ./",
-    "eject": "react-scripts eject"
+    "prettier": "^1.14.2",
+    "prettier-eslint": "^6.1.1"
   }
 }
