--- a/package.json
+++ b/package.json
@@ -2,25 +2,24 @@
   "name": "Demineur",
   "version": "0.1.0",
   "private": true,
+  "homepage": "minesweeper",
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test --env=jsdom",
+    "start": "react-scripts start",
+    "build": "react-scripts build && rm -rf docs && mv build docs",
+    "test": "react-scripts test --env=jsdom",
     "lint": "eslint --ext .js ./",
     "fix": "eslint --fix .js ./",
-    "eject": "react-app-rewired eject"
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "color": "^3.0.0",
     "font-awesome": "^4.7.0",
     "prop-types": "^15.6.2",
     "react": "^16.5.1",
-    "react-addons-css-transition-group": "^15.5.2",
-    "react-app-rewired": "^1.6.2",
     "react-dom": "^16.5.1",
     "react-fontawesome": "^1.6.1",
     "react-scripts": "1.1.5",
-    "react-transition-group": "1.x",
+    "react-transition-group": "^1.2.1",
     "styletron-client": "^2.5.7",
     "styletron-react": "^2.5.7",
     "svg.js": "^2.6.6"
